--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "nodemon --ignore 'db/db.json' index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
